# shiny-waffle

./: README.md
Project1/: CMakeLists.txt  Readme.md
Project1/model/Building/: model.sdf
Project1/model/fourwheel/: model.config  model.sdf
Project1/script/: welcome_message.cpp
Project1/world/: world.xml
Project2/: Readme.md
Project2/ball_chaser/: CMakeLists.txt
Project2/ball_chaser/src/: process_image.cpp
Project2/my_robot/launch/: world.launch
Project2/my_robot/rviz/: config_file.rviz
Project2/my_robot/urdf/: my_robot.xacro
Project2/my_robot/worlds/: myworld.world
Project3/: Readme.md
Project3/my_robot/launch/: amcl.launch  world.launch
Project3/my_robot/maps/: myworld.pgm  myworld.yml
Project3/my_robot/rviz/: config_file.rviz
Project3/my_robot/urdf/: my_robot.xacro
Project4/: .gitignore  README.md
Project4/my_robot/config/: global_costmap_params.yaml
Project5/: readme.md
Project5/add_markers/: CMakeLists.txt  package.xml
Project5/pick_objects/: CMakeLists.txt  package.xml
Project5/pick_objects/launch/: amcl.launch  pick_objects.launch  rviz.launch
Project5/pick_objects/launch/includes/: amcl.launch.xml  move_base.launch.xml
Project5/pick_objects/map/: myworld.yml
Project5/pick_objects/src/: pick_objects.cpp
Project5/pick_objects/worlds/: myworld.world
Project5/rvizConfig/: config.rviz
Project5/scripts/: add_markers.sh  helpers.sh  home_service.sh  pick_objects.sh  setup.sh  test_navigation.sh  test_slam.sh
ball_chaser/: package.xml
ball_chaser/src/: drive_bot.cpp  process_image.cpp
(+11 files in other folders)
