<?xml version="1.0"?>
<package>
  <name>pick_objects</name>
  <version>0.0.0</version>
  <description>The pick_objects package</description>


  <!-- maintainer and author -->
  <maintainer email="gleurquin@github.com">gleurquin</maintainer>
  <author email="gleurquin@github.com">gleurquin</author>

  <!-- License -->
  <license>TODO</license>

  <!-- build and run dependencies -->

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>message_generation</build_depend> -->

  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>add_markers</build_depend>

  <!-- export -->
  <export></export>

</package>
